--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "baseUrl": "./src",
     "paths": {
       "@app/*": ["./*"],
+      "@components/*": ["./components/*"],
       "@screens/*": ["./screens/*"]
     }
   }
