--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
+    "expo-localization": "~14.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "i18next": "^23.2.11",
     "react": "18.2.0",
+    "react-i18next": "^13.0.2",
     "react-native": "0.71.8",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0"
