--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -37,3 +37,5 @@ rules:
         alphabetize: { order: 'asc', caseInsensitive: true },
       },
     ]
+  '@typescript-eslint/no-misused-promises':
+    [2, { 'checksVoidReturn': { 'attributes': false } }]
