--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-status-bar": "~1.4.4",
     "i18next": "^23.2.11",
     "react": "18.2.0",
+    "react-hook-form": "^7.45.1",
     "react-i18next": "^13.0.2",
     "react-native": "0.71.8",
     "react-native-safe-area-context": "4.5.0",
