--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -9,7 +9,7 @@ parserOptions:
   ecmaVersion: latest
   sourceType: module
   project: ./tsconfig.json
-ignorePatterns: [babel.config.js]
+ignorePatterns: ['*.config.js']
 plugins:
   - '@typescript-eslint'
   - react
@@ -30,6 +30,7 @@ rules:
             { pattern: '@app/**', group: 'internal' },
             { pattern: '@screens/**', group: 'internal' },
             { pattern: '@components/**', group: 'internal' },
+            { pattern: '@assets/**', group: 'internal', position: 'after' },
           ],
         groups: [['external', 'builtin'], 'internal', 'parent', 'sibling'],
         'newlines-between': 'always',
