feat(fundDetail): start details screen

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "i18next": "^23.2.11",
+    "luxon": "^3.3.0",
     "react": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-i18next": "^13.0.2",
@@ -36,6 +37,7 @@
     "@babel/core": "^7.20.0",
     "@gabrielyotoo/eslint-config-react-native": "^1.2.0",
     "@types/d3-shape": "^3.1.1",
+    "@types/luxon": "^3.3.0",
     "@types/react": "~18.0.14",
     "@types/react-native-svg-charts": "^5.0.12",
     "eslint": "^8.45.0",
