--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.45.1",
     "react-i18next": "^13.0.2",
     "react-native": "0.71.8",
+    "react-native-reanimated": "2.14.3",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.6.0",
