--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
@@ -27,11 +28,13 @@
     "react-hook-form": "^7.45.1",
     "react-i18next": "^13.0.2",
     "react-native": "0.71.8",
+    "react-native-pager-view": "6.0.2",
     "react-native-reanimated": "2.14.3",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.6.0",
     "react-native-svg-charts": "^5.4.0",
+    "react-native-tab-view": "^3.5.2",
     "react-redux": "^8.1.1"
   },
   "devDependencies": {
